--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,12 @@ services:
       - ./data:/CKG/data
     environment: 
       - EXEC_MODE="minimal"
+      - VIRTUAL_HOST=ckg.137.120.31.102.nip.io
+      - VIRTUAL_PORT=7474
     ports:
-      - 8050:8050
-      - 7470:7474
-      - 8090:8090
-      - 7680:7687
-      - 6379:6379
+      - 8050:8050 # CKG prod
+      - 7470:7474 # HTTP Neo4j
+      - 8090:8090 # jupyterHub
+      - 7680:7687 # Bolt Neo4j
+      - 6379:6379 # Redis
+      # CKG dev: 5000
